--- a/index.html
+++ b/index.html
@@ -3,18 +3,38 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Guessing Game</title>
+    <title id="subtitle">Guessing Game</title>
     <link rel="stylesheet" href="main.css">
     <!-- the MAIN.CSS file is linked here -->
   </head>
 
-  <body>
+  <body id="main">
+    <h1 class="title">The Guessing Game</h1>
+
+    <div class="guess-feedback" id="guess-feedback">
+      <h4></h4>
+    </div>
+
+    <ul id="previous-guesses" class="ul">
+      <li class='guess'>...</li>
+      <li class='guess'>...</li>
+      <li class='guess'>...</li>
+      <li class='guess'>...</li>
+      <li class='guess'>...</li>
+    </ul>
+    <div class="instructions">Enter a number between 1-100</div>
+    <input class="input" id="input" placeholder="Enter guess"> 
+    <div> <button class="button-submit">Submit</button></div>
+    <button class="button" id="hint-button">Hint</button>
+    <p class="hint" id='hint'> </p>
+    <hr class="line">
+    <!-- TODO: see if there is a better way to reload page -->
+    <button class="button" onClick="window.location.reload()">Play Again</button>
+    
 
 
 
-
-
-    <!-- <script src='js/guessing-game.js'></script> -->
+    <script src='js/guessing-game.js'></script>
     <!-- uncomment the script tag above when you are ready to add JavaScript to your document -->
   </body>
 
