Disable submit and hint buttons after win/lose

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
     <div class="instructions">Enter a number between 1-100</div>
     <input class="input" id="input" placeholder="Enter guess"> 
-    <div> <button class="button-submit">Submit</button></div>
+    <div> <button class="button-submit" id="button-submit">Submit</button></div>
     <button class="button" id="hint-button">Hint</button>
     <p class="hint" id='hint'> </p>
     <hr class="line">
